--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -337,7 +337,7 @@ active
             71: `{{ question.driver_code|safe    }}`, // Python default
             50: `#include <stdio.h>\n\nint main() {\n\t// Write your C code here\n\treturn 0;\n}`, // C default
             54: `#include <iostream>\nusing namespace std;\n\nint main() {\n\t// Write your C++ code here\n\treturn 0;\n}`, // C++ default
-            62: `public class Main {\n\tpublic static void main(String[] args) {\n\t\t// Write your Java code here\n\t}\n}` // Java default
+            62: `{{ question.driver_code|safe    }}` // Java default
             // Add more language defaults as needed
         };
 
