--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -1,4 +1,4 @@
-{% extends "student/base.html" %} {% load static %} {% block title %} Practice: {{ question.title }} {% endblock %} {% block pp_active %} active {% endblock %} {% block extra_css %}
+{% extends "student/base.html" %} {% load static %} {% block title %} Practice: {{ question.title }} {% endblock %} {%block pp_active %} active {% endblock %} {% block extra_css %}
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <style>
@@ -118,6 +118,104 @@
     body[data-theme='dark'] .btn-outline-primary:hover {
         background-color: #444;
         border-color: #666;
+    }
+</style>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
+<!-- Modal next css-->
+<style>
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+    button {
+        font-size: 18px;
+        font-weight: 400;
+        color: #fff;
+        padding: 14px 22px;
+        border: none;
+        background: #4070f4;
+        border-radius: 6px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #265df2;
+    }
+
+    button.show-modal,
+    .modal-box {
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    section.active .show-modal {
+        display: none;
+    }
+
+    .overlay {
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        background: rgba(0, 0, 0, 0.3);
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    section.active .overlay {
+        opacity: 1;
+        pointer-events: auto;
+    }
+
+    .modal-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 380px;
+        width: 100%;
+        padding: 30px 20px;
+        border-radius: 24px;
+        background-color: #fff;
+        opacity: 0;
+        pointer-events: none;
+        transition: all 0.3s ease;
+        transform: translate(-50%, -50%) scale(1.2);
+    }
+
+    section.active .modal-box {
+        opacity: 1;
+        pointer-events: auto;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .modal-box i {
+        font-size: 70px;
+        color: #4070f4;
+    }
+
+    .modal-box h2 {
+        margin-top: 20px;
+        font-size: 25px;
+        font-weight: 500;
+        color: #333;
+    }
+
+    .modal-box h3 {
+        font-size: 16px;
+        font-weight: 400;
+        color: #333;
+        text-align: center;
+    }
+
+    .modal-box .buttons {
+        margin-top: 25px;
+    }
+
+    .modal-box button {
+        font-size: 14px;
+        padding: 6px 12px;
+        margin: 0 10px;
     }
 </style>
 
@@ -295,6 +393,19 @@
 
     </div>
 
+    <section id="next-modal-btn" class="d-none">
+        <button type="submit" class="btn btn-secondary w-100 p-2" id="submit-btn" accesskey="enter">Submit Code</button>
+        <span class="overlay"></span>
+        <div class="modal-box">
+            <i class="fa-regular fa-circle-check"></i>
+            <h2>Completed</h2>
+            <h3>You have sucessfully solved this problem.</h3>
+            <div class="buttons">
+                <button class="close">Close</button>
+                <button>Next Question</button>
+            </div>
+        </div>
+    </section>
 
 
 </div>
@@ -487,15 +598,15 @@
             .then(data => {
                 const testCaseResultsDiv = document.getElementById('testCaseResults');
                 testCaseResultsDiv.innerHTML = ''; // Clear previous results
-            
+
                 clearInterval(countdownInterval); // Clear the interval
                 submit_btn.prop("disabled", false);
                 submit_btn.text("Submit Code");
-            
+
                 testCaseResultsDiv.scrollIntoView({
                     behavior: 'smooth'
                 });
-            
+
                 // If there are test case results, display them
                 if (data.test_case_results) {
                     data.test_case_results.forEach((result, index) => {
@@ -509,7 +620,7 @@
                         );
 
                         resultDiv.id = "test-case-result-id";
-            
+
                         // Include compiler output only when the test case fails
                         const compilerOutputHTML = document.createElement('div');
                         compilerOutputHTML.id = "compiler-output";
@@ -523,7 +634,7 @@
 
                             console.log(result.compiler_output);
                         }
-            
+
                         resultDiv.innerHTML = `
                             <div class="card-header d-flex justify-content-between align-items-center">
                                 <span>
@@ -570,7 +681,7 @@
                     }
                     document.getElementById("test-case-result-id").scrollIntoView({ behavior: 'smooth' });
                 }
-            
+
                 // If there's a global compiler error (e.g., server-side), display it
                 if (data.compiler_output) {
                     const globalErrorDiv = document.createElement('div');
@@ -581,10 +692,10 @@
                     `;
                     testCaseResultsDiv.prepend(globalErrorDiv);
                 }
-            
+
                 console.log(testCaseResultsDiv);
             })
-            
+
             .catch(error => {
                 console.error('Error:', error);
                 clearInterval(countdownInterval); // Clear the interval
@@ -593,16 +704,24 @@
             });
     });
 
-    function submission_accepted(){
+    function submission_accepted() {
         const start = () => {
-            confetti.start(); // Start the confetti
+            confetti.start();
             setTimeout(function () {
-                confetti.stop(); // Stop the confetti after 5 seconds
-            }, 5000); // 5000 milliseconds = 5 seconds
+                confetti.stop();
+            }, 3000);
         };
+
+        //const modal = document.getElementById("next-modal-btn"),
+        // overlay = document.querySelector(".overlay"),
+        // close = document.querySelector(".close"),
+        // next = document.querySelector(".modal-box button:last-child");
         
+        // modal.classList.remove("d-none");
+        // modal.classList.add("active");
+
         start();
-        
+
     }
 
 </script>
