--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="{% static 'css/student/dashboard/styles.min.css' %}" />
     <style>
         body {
-            background: linear-gradient(to bottom right, #0a0057, #fff);
+            background: linear-gradient(to bottom right, #e4e3e5, #fff);
             background-repeat: no-repeat;
         }
 
