--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -536,7 +536,7 @@
 
         // Default code snippets for specific languages
         const defaultCode = {
-            71: `#Write your code here...`, // Python default
+            71: `{{ question.driver_code|safe    }}`, // Python default
             50: `#include <stdio.h>\n\nint main() {\n\t// Write your C code here\n\treturn 0;\n}`, // C default
             54: `#include <iostream>\nusing namespace std;\n\nint main() {\n\t// Write your C++ code here\n\treturn 0;\n}`, // C++ default
             62: `` // Java default
