light theme for admin, cpu and memory limit fields, driver code and solution model added

--- a/templates/administration/practice/edit_question.html
+++ b/templates/administration/practice/edit_question.html
@@ -103,6 +103,28 @@ active
 
                                 </div>
 
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="mb-3">
+                                            <label for="assignment_type" class="form-label">CPU TIME LIMIT <small>(in seconds)</small>
+                                                <div class="star">*</div>
+                                            </label>
+                                            <input type="text" value="{{ question.cpu_time_limit }}" class="form-control" name="cpu_time_limit" placeholder="CPU time limit here..." required>
+                                        </div>
+                                    </div>
+
+                                    <div class="col-md-6">
+                                        <div class="mb-3">
+                                            <label for="job_title" class="form-label">MEMORY LIMIT <small>(in kilobytes)</small>
+                                                <div class="star">*</div>
+                                            </label>
+                                            <input type="text" value="{{ question.memory_limit }}" class="form-control" name="memory_limit" placeholder="Memory limit here..." required>
+                                        </div>
+                                    </div>
+
+
+                                </div>
+
                                 <div>
 
                                 </div>
